frontend/test/should_fail/defYield_007b.grg
using defYield;

rule t
{
	modify {
		y:B;
	---
		def x:B;
		eval { x = y; }
	}
}

pattern p modify (x:B --- def z:B)
{
	modify {
		eval { z = x; }
	}
}

